- Added allow::options::ssl and allow::options::nopasscont, requested by iguy and Scytale.
- Removed usermode +b from docs (been gone for a long time) (#0000798) reported by Rocko
- Fixed an SQLINE bug
- code cleanup / misc minor bugfixes (MyMalloc, oper msgs)
- Fixed a throttling bug where it could return negative numbers.
- Improved IPv6 throttle hashing
- Make the above actually work
- Improved throttle hashing (both IPv4 and IPv6).
- Changed throttling so it now bans after M connects in N seconds rather than 2 connects in N 
  seconds. (set::throttle::connections).
- Updated channelmode +f "algorithm", much better now. Reported by JimmyZ, Rocko, and others.
- Added badword::action <replace|block>. (replace is default). If you specify block, instead
  of replacing the word with "<censored>" it will block the message from ever being sent. 
  (#0000557) suggested by paranomix
- Made /stats b output badword quit {} (#0000883) reported by AngryWolf
- Made except ban {} override ban ip {} (suggested by Lithium).
- Removed some old defines for the old password encryption system (#0000765) reported by
  AngryWolf
- Made it so you can use a ~ as the first character of an ident with /chgident (#0000765)
  reported by AngryWolf
- badword::action::block should now be ok
- Added some missing /stats flags to help.conf and the /stats ? output (#0000886) reported
  by Rocko
- Fix for set::restrict-channelmodes (eating parameters).
- Made it so if someone /who's you and you are +p it doesn't show the channel you are on
- Fixed a ban version {} bug where it would version remote clients
- Added aliases/anope.conf (For Anope IRC Services)
- Updated some documentation
- Minor error msg improvements
- Fixed a bug with wrong hub/leaf settings ("non-hub introduced leaf") causing a crash 
  (#0000732).
- Fixed a bug where an unknown set::dns directive wasn't reported as an error (#0000898)
  reported by AngryWolf